// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accordion /> opens and closes the <Accordion /> component 1`] = `
<div
  class="accordion__Container-l3iym9-0 inwkwi"
>
  <div
    class="accordion__Inner-l3iym9-1 daPdxt"
  >
    <h1
      class="accordion__Title-l3iym9-2 jMjSBB"
    >
      Frequently Asked Questions
    </h1>
    <div
      class="accordion__Item-l3iym9-3 hPyABJ"
    >
      <div
        class="accordion__Header-l3iym9-4 ePHOzF"
        data-testid="accordion-header"
      >
        What is Netflix?
        <img
          alt="Open"
          src="/images/icons/add.png"
        />
      </div>
    </div>
    <div
      class="accordion__Item-l3iym9-3 hPyABJ"
    >
      <div
        class="accordion__Header-l3iym9-4 ePHOzF"
        data-testid="accordion-header"
      >
        How much does Netflix cost?
        <img
          alt="Open"
          src="/images/icons/add.png"
        />
      </div>
    </div>
    <div
      class="accordion__Item-l3iym9-3 hPyABJ"
    >
      <div
        class="accordion__Header-l3iym9-4 ePHOzF"
        data-testid="accordion-header"
      >
        Where can I watch?
        <img
          alt="Open"
          src="/images/icons/add.png"
        />
      </div>
    </div>
    <div
      class="accordion__Item-l3iym9-3 hPyABJ"
    >
      <div
        class="accordion__Header-l3iym9-4 ePHOzF"
        data-testid="accordion-header"
      >
        How do I cancel?
        <img
          alt="Open"
          src="/images/icons/add.png"
        />
      </div>
    </div>
    <div
      class="accordion__Item-l3iym9-3 hPyABJ"
    >
      <div
        class="accordion__Header-l3iym9-4 ePHOzF"
        data-testid="accordion-header"
      >
        What can I watch on Netflix?
        <img
          alt="Open"
          src="/images/icons/add.png"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> renders the <Accordion /> with populated data 1`] = `
<div
  class="accordion__Container-l3iym9-0 inwkwi"
>
  <div
    class="accordion__Inner-l3iym9-1 daPdxt"
  >
    <h1
      class="accordion__Title-l3iym9-2 jMjSBB"
    >
      Frequently Asked Questions
    </h1>
    <div
      class="accordion__Item-l3iym9-3 hPyABJ"
    >
      <div
        class="accordion__Header-l3iym9-4 ePHOzF"
      >
        What is Netflix?
        <img
          alt="Open"
          src="/images/icons/add.png"
        />
      </div>
    </div>
    <div
      class="accordion__Item-l3iym9-3 hPyABJ"
    >
      <div
        class="accordion__Header-l3iym9-4 ePHOzF"
      >
        How much does Netflix cost?
        <img
          alt="Open"
          src="/images/icons/add.png"
        />
      </div>
    </div>
    <div
      class="accordion__Item-l3iym9-3 hPyABJ"
    >
      <div
        class="accordion__Header-l3iym9-4 ePHOzF"
      >
        Where can I watch?
        <img
          alt="Open"
          src="/images/icons/add.png"
        />
      </div>
    </div>
    <div
      class="accordion__Item-l3iym9-3 hPyABJ"
    >
      <div
        class="accordion__Header-l3iym9-4 ePHOzF"
      >
        How do I cancel?
        <img
          alt="Open"
          src="/images/icons/add.png"
        />
      </div>
    </div>
    <div
      class="accordion__Item-l3iym9-3 hPyABJ"
    >
      <div
        class="accordion__Header-l3iym9-4 ePHOzF"
      >
        What can I watch on Netflix?
        <img
          alt="Open"
          src="/images/icons/add.png"
        />
      </div>
    </div>
  </div>
</div>
`;
